refactor: replace deprecated list methods and add RocksDBException handling